--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,13 @@ body{
 }
 .side_i h1{
     position: relative;
+    font-size: 5em;
+}
+.side_i h2{
+    font-size: 2.6em;
+}
+.side_i h2:nth-child(3) {
+    font-size: 5em ;
 }
 .side_i h1::before{
     content: '';
@@ -141,6 +148,8 @@ body{
     width: 80%;
 }
 .side_ii{
+    width: 100%;
+    
     padding-top: 1.5rem;
     position: relative;
 }
@@ -163,6 +172,21 @@ body{
   font-weight: bold;
   padding-left: 1.5rem;
 }
+.side_ii h2{
+    font-size: 4em;
+}
+.side_ii h1{
+    font-size: 3em;
+}
+.imh-holder{
+    background-image: url('../assets/shot-by-cerqueira-cHY_urj0ePE-unsplash.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 80vh;
+}
+
 .owl-carousel,
 .blog_slide{
     position: relative;
@@ -356,6 +380,9 @@ footer p{
     }
     .menu-icon{
         display: none;
+    }
+    .imh-holder img{
+        width: 70% !important;
     }
     .side_i h1{
         font-size: 8em;
