--- a/css/style.css
+++ b/css/style.css
@@ -473,11 +473,19 @@ footer p{
 
 /* About page */
 .about{
-    background: url('../assets/about.png');
-    background-size: cover;
-    background-position: 0% -100% ;
-    background-repeat: no-repeat;
+    /* width: 100%; */
     height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+.about::before{
+    content: '';
+    height: 100%;
+    width: 50%;
+    background: url('../assets/about.png') ;
+    position: absolute;
+    background-size: cover;
+    right: 0;
 }
 .self-a{
     margin-top: -100px;
